# evaluating_SLM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
benchmark/: README.md
configs/: default.yaml
data/: .gitignore  README.md
examples/: README.md  minimal_usage.py
notebooks/: README.md  analyze_dataset_simpleqa_verified.ipynb
scripts/: run_benchmarks.py
src/evaluating_slm/: __init__.py  cli.py
tests/: test_import.py
